[tool.poetry]
name = "cf-evaluation"
version = "0.1.0"
description = ""
authors = ["Ryan Littlefield <ryan@ryanlittlefield.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
pytest = "^5.0"
pluggy = "^0.13.1"
importlib-metadata = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
